Se agrego la opcion para  que el admin suba imagenes de las habitaciones